Release CMTK-1.5.4:

(r2705) Added: new "groupwise_affine" tool for affine groupwise registration
    unites the "congeal" and "groupwise_rmi" tools, which will be removed in
    the next release of CMTK.
(r2695) Fixed: subtle and rare numerical problem leading to NAN values in
    image-to-physical matrix read from Nifti files with quaternion-based
    orientation.
(r2684) Fixed: improved installation and packaging by fixing multiple problems
    related to CMTK use files and scripts.
(r2680) Improved: better naming, grouping, and documentation of "film",
    "volume_injection", and "volume_reconstruction" command line options. Also
    named equivalent options consistently between these tools.
(r2664) Fixed: restricting "warpx" tool deformation to certain coordinate
    directions was broken.


Release CMTK-1.5.3 (2010-12-13):

(r2652) Improved: CMTK can now be more flexibly configured to use bundled zlib
    over existing system zlib. This is partially addressing Issue #5395, with
    a patch provided by Kent Williams. This also fixes Issue ##5382, because
    we no longer depend on Darwin's broken system zlib.
(r2629) Fixed: LZMA decompression was broken on i686 due to bug in
    lzmadec_seek(). The decompression backend classes now use a common fake
    "seek" implementation if seek is not supported by the low-level backend or
    broken. 
(r2613) Fixed: "dbtool" was warning of unused command line parameters.
(r2611) Fixed: properly exit "fview" application with an exception when one of
    the input images cannot be read.


Release CMTK-1.5.2 (2010-12-06):

(r2591) Fixed: previous release accidentally removed the ability of CMTK's
    image writer to recursively create non-existing directories in the output
    path.


Release CMTK-1.5.1 (2010-12-02):

(r2580) Fixed: segmentation fault when getting cropped subvolume after
    providing out-of-range cropping boundaries.
(r2575) Fixed: all output images are now written in the same orientation and