@@ -1,5 +1,8 @@
 Release CMTK-1.5.4:
 
+(r2708) Added: new "groupwise_warp" tool for nonrigid groupwise registration
+    unites the "congeal_warp" and "groupwise_rmi-warp" tools, which will be
+    removed in the next release of CMTK.
 (r2705) Added: new "groupwise_affine" tool for affine groupwise registration
     unites the "congeal" and "groupwise_rmi" tools, which will be removed in
     the next release of CMTK.
